# emma-media-bot

./: README.md  pyproject.toml
src/emma_media_bot/: __init__.py  lambda_handler.py
